# python-sdk

./: .gitignore  LICENSE  README.md  bobsled_package_notebook.ipynb  makedoc.sh  publish.sh  pyproject.toml  requirements.txt  requirements_dev.txt  script-linkup.py  script.py  setup.py
_docs/: conf.py
_docs/_build/doctrees/: bobsled_sdk.doctree  environment.pickle  index.doctree
_docs/_build/html/: .buildinfo  genindex.html  search.html
_docs/_build/html/_modules/bobsled_sdk/: BobsledException.html
docs/: bobsled.rst  bobsled_sdk.html  bobsled_sdk.rst  conf.py  genindex.html  index.html  index.rst  modules.rst  objects.inv  py-modindex.html  searchindex.js
docs/_build/doctrees/: bobsled.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/: bobsled.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/src/bobsled/: BobsledException.html  MainClass.html  utils.html
docs/_modules/: index.html
docs/_modules/bobsled_sdk/: MainClass.html
docs/_sources/: index.rst.txt
src/bobsled/: BobsledException.py  MainClass.py  __init__.py  utils.py
src/bobsled_sdk/: BobsledException.py  MainClass.py  __init__.py  utils.py
tests/: simple.py  test_bobsled.py  test_exceptions.py
