[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bobsled_python_sdk"
version = "0.0.4"
authors = [
  { name="Danny Yu", email="danny-yu@berkeley.edu" },
]
description = "Python SDK for Bobsled"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/bobsled-inc/python-sdk"
"Bug Tracker" = "https://github.com/bobsled-inc/python-sdk/issues"